--- a/interface/package.json
+++ b/interface/package.json
@@ -33,7 +33,7 @@
 		"build": "react-app-rewired build",
 		"test": "react-app-rewired test",
 		"eject": "react-scripts eject",
-		"format": "yarn prettier --use-tabs --write ."
+		"format": "yarn prettier --write ."
 	},
 	"eslintConfig": {
 		"extends": [
