--- a/factory_settings.ini
+++ b/factory_settings.ini
@@ -30,9 +30,9 @@ build_flags =
 
   ; NTP settings
   -D FACTORY_NTP_ENABLED=true
-  -D FACTORY_NTP_TIME_ZONE_LABEL=\"Europe/London\"
+  -D FACTORY_NTP_TIME_ZONE_LABEL=\"Africa/Johannesburg\"
   -D FACTORY_NTP_TIME_ZONE_FORMAT=\"GMT0BST,M3.5.0/1,M10.5.0\"
-  -D FACTORY_NTP_SERVER=\"time.google.com\"
+  -D FACTORY_NTP_SERVER=\"time.cloudflare.com\"
 
   ; OTA settings
   -D FACTORY_OTA_PORT=8266
